# codegraph

./: .gitignore  Cargo.toml  README.md  config.example.toml
src/: lib.rs  main.rs
src/core/: config.rs  graph.rs  mod.rs  parser.rs  query.rs  registry.rs
src/languages/: mod.rs
src/languages/go/: mod.rs
src/languages/java/: mod.rs
src/server/: handlers.rs  mod.rs  routes.rs
src/storage/: mod.rs  models.rs  sqlite.rs
tests/: integration_test.rs
