[package]
name = "codegraph"
version = "0.1.0"
edition = "2021"
description = "A multi-language code graph parsing service"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP Server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Tree-sitter
tree-sitter = "0.24"
tree-sitter-graph = "0.12"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
